// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importing parses importing bar(A) fog(B) 1`] = `
[
  [
    {
      "args": [
        "A",
      ],
      "end": 25,
      "kind": "import",
      "name": "bar",
      "start": 11,
    },
    {
      "args": [
        "B",
      ],
      "end": 25,
      "kind": "import",
      "name": "fog",
      "start": 11,
    },
  ],
]
`;

exports[`lineComment parse // #export  1`] = `
[
  {
    "end": 11,
    "kind": "export",
    "start": 3,
  },
]
`;

exports[`parse #export(A, B) importing bar(A) 1`] = `
{
  "args": [
    "A",
    "B",
  ],
  "end": 36,
  "importing": [
    {
      "args": [
        "A",
      ],
      "end": 35,
      "kind": "import",
      "name": "bar",
      "start": 29,
    },
  ],
  "kind": "export",
  "start": 5,
}
`;

exports[`parse #export(foo) with trailing space 1`] = `
[
  {
    "args": [
      "Elem",
    ],
    "end": 24,
    "kind": "export",
    "start": 8,
  },
]
`;

exports[`parse #import foo 1`] = `
[
  {
    "end": 11,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "foo",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`parse #import foo(a,b) as baz from bar 1`] = `
[
  {
    "end": 27,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "bar",
        },
        SimpleSegment {
          "args": undefined,
          "as": "baz",
          "name": "foo",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;
